BUGFIX: profile shows all the shared transactions, not limited by parent